<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/signup_btn_background"
    tools:context=".OrdersforSpecifiedTimePage2">

    <!-- This page is after the complete_order_page -->
    <!-- When vendors complete one order, it will be greyed out and total orders count will be updated -->
    <!-- Once all orders have been completed, vendors will be directed to orders_for_next_timeslot_page -->

    <LinearLayout

        android:id="@+id/MainVendorPage"
        android:layout_width="416dp"
        android:layout_height="650dp"
        android:background="@drawable/background_customer_page"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/VendorStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="35dp"
                android:text="@string/vendor_store_name"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TimeSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="75dp"
                android:text="@string/timeslot"
                android:textColor="#315815"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/NumberofOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="92dp"
                android:text="@string/number_of_orders_update"
                android:textColor="#315815"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SearchTab"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/search_button"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="230dp"
                android:paddingBottom="8dp"
                android:text="Search..."
                android:textAlignment="center"
                android:textColor="@color/translucent_gray2"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/SearchIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/SearchTab"
                android:layout_alignTop="@+id/SearchTab"
                android:layout_alignEnd="@+id/SearchTab"
                android:layout_alignBottom="@+id/SearchTab"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="317dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="search icon"
                app:layout_constraintBottom_toBottomOf="@id/SearchTab"
                app:layout_constraintEnd_toStartOf="@id/SearchTab"
                app:layout_constraintStart_toStartOf="@id/SearchTab"
                app:layout_constraintTop_toTopOf="@id/SearchTab"
                app:srcCompat="@drawable/search_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/OrderDetailsTab1"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_below="@+id/SearchTab"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="@color/translucent_gray2"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/OrderName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_name_1" />

                <TextView
                    android:id="@+id/OrderQuantity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_quantity_1" />

                <TextView
                    android:id="@+id/OrderPrice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_price_1" />

                <TextView
                    android:id="@+id/AddOn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:text="@string/add_on_1" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/OrderDetailsTab2"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_below="@+id/OrderDetailsTab1"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="@color/logo_background"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/OrderName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_name_2" />

                <TextView
                    android:id="@+id/OrderQuantity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_quantity_1" />

                <TextView
                    android:id="@+id/OrderPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_price_1" />

                <TextView
                    android:id="@+id/AddOn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:text="@string/add_on_2" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/OrderDetailsTab3"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_below="@+id/OrderDetailsTab2"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="@color/logo_background"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/OrderName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_name_3" />

                <TextView
                    android:id="@+id/OrderQuantity3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_quantity_3" />

                <TextView
                    android:id="@+id/OrderPrice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#000000"
                    android:text="@string/order_price_3" />

                <TextView
                    android:id="@+id/AddOn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:text="@string/add_on_1" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/UserLogo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_icon"
        android:contentDescription="user icon"/>

    <ImageView
        android:id="@+id/BackArrowLogo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow_icon"
        android:contentDescription="arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>